--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,12 @@ path = "src/bin/serving.rs"
 name = "model-server"
 path = "src/main.rs"
 
+[lib]
+crate-type = ["cdylib"]
+bench = false
+path = "src/lib/lib.rs"
+
+
 [dependencies]
 csv = "1.1"
 rand = "0.8.5"
@@ -23,3 +29,7 @@ actix-web = "4"
 onnxruntime = "0.0.14"
 ndarray = "*"
 ndarray-rand = "*"
+serde = "^1"
+serde_json = "^1"
+serde_derive = "^1"
+#reqwest = "^0.11"
